--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Suspicious Pizza's</title>
+    <title>Spaceshare | Share your data</title>
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="css/stylesheet.css" />
     <script src="js/vendor/modernizr.js"></script>
@@ -14,7 +14,6 @@
 
 <nav class="top-bar" data-topbar>
   <ul class="title-area">
-
     <li class="name">
       <h1>
         <a href="/index.html">
@@ -24,10 +23,8 @@
     </li>
     <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
   </ul>
-
  <section class="top-bar-section">
     <ul class="right">
-      
       <li class="divider"></li>
       <li class="has-dropdown">
         <a href="http://foundation.zurb.com/templates.html" class="">Develop</a>
@@ -48,7 +45,6 @@
           <li><a href="http://foundation.zurb.com/support/images-and-badges.html">Images &amp; Badges</a></li>
         </ul>
       </li>
-      
       <li class="divider"></li>
       <li>
         <a href="http://foundation.zurb.com/docs" class="">Docs</a>
@@ -59,9 +55,6 @@
     </ul>
   </section>
 </nav>
-
-
-
 </head>
 
 
@@ -98,20 +91,19 @@
     </div>
 
 
-
 <div class="row"> 
 	<div class="large-5 columns">
 		<div class="panel"> 
 		<h2><a href="" style="font-family:billabong">Create a Space</a></h2>
-		<form action="/host">
+		<form action="upload" method="post" enctype="multipart/form-data">
 			<label>Choose a Space</label>
-			<input type="text" name="space" placeholder="e.g. '32'"/>
+			<input type="text" name="space" id="cheese" placeholder="e.g. '32'"/>
 			<!--<label>Optional Password?</label>
 			<input type="text" name="pass" placeholder="e.g. '32'"/> -->
 			<label>Upload a file!</label>
-			<input type="file" name="file" accept="media_type*">
+			<input type="file" name="file">
 
-			<input <a type="submit" value="Create My Space" class="large radius button" style="font-family:billabong"></a>
+			<input type="submit" value="Upload" class="large radius button" style="font-family:billabong">  
 		</form>
 		</div>
 	</div>
