--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
     <li class="name">
       <h1>
         <a href="/index.html">
-          Spaceshare.me
+          <span id="name">Spaceshare.me</span>
         </a>
       </h1>
     </li>
