--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -1,4 +1,7 @@
-@import url('//fonts.googleapis.com/css?family=Lobster|Cabin:400,700');
+@import url('//fonts.googleapis.com/css?family=Pacifico|Cabin:400,700');
+
+/* pacifico!!! */
+
 @font-face{
     font-family: 'billabong';
     src: url('billabong-webfont.eot');
@@ -10,9 +13,10 @@
     font-style: normal;
 }
 
+.look{
+  font-family: 'Pacifico';
+}
 
-
-
-#name{
-  font-family: 'Lobster';
+#gist{
+  font-size: 5em;
 }
