--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
 {% elif free and space %}
 <div class="row">
   <div class="large-12 columns">
-    <p class="look" style="font-size:5em">Thanks!! You've reserved space {{space}}, you can access it at <span>/uploads/{{space}}</span> </p>
+    <p class="look" style="font-size:5em">Thanks!! You've reserved space {{space}}, you can access it at <span href="/upload/{{space}}">/upload/{{space}}</span>!</p>
   </div>
 {% elif space %}
 <div class="row">
