more small fixes

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,9 +50,7 @@
   <div class="large-12 columns">
     <p class="look">Thanks!! You've reserved space {{space}} </p>
 </div>
-{% endif %}
-
-{% if non %}
+{% elif non %}
 <script>
 alert("Woops! That page doesn't exist! Sorry about that.")
 </script>
