--- a/templates/index.html
+++ b/templates/index.html
@@ -58,12 +58,19 @@
 		<div class="panel">
 		<h2><a href="" style="font-family:Pacifico">Create a Space</a></h2>
 
-    <form action="upload" method="POST" enctype="multipart/form-data">
+    <form action="upload" method="POST" enctype="multipart/form-data" onsubmit="fileUpload();">
       <br>
-			<input type="number" name="space" placeholder="e.g. '32' "/>
+			<input type="number" name="space" id="reserve" placeholder="e.g. '32' "/>
 			<input type="file" name="file">
 			<input type="submit" value="upload" class="radius button" style="font-family:Pacifico ; font-size:2em">
 		</form>
+
+    <script type="text/javascript">
+    function fileUpload(){
+      var space = document.getElementById("reserve").value;
+      console.log("SpaceReserve request :"+space);
+    }
+    </script>
 
     </div>
 	</div>
@@ -73,30 +80,19 @@
 			<h2><a href="" class ="look">Open a Space</a></h2>
       <br>
 
-      <form action="open" method="" >
-				<input type="number" name="space" id="redir" placeholder="e.g. '32'"/>
-				<input type="submit" value="open" onclick="javascript:SubmitFrm()" class="radius button" style="font-family: Pacifico; font-size:2em">
+      <form action="open" method="" onsubmit="SubmitFrm(); return false;" >
+				<input type="number" name="space" id="redir" placeholder="e.g. '32' "/>
+				<input type="submit" value="open" class="radius button" style="font-family: Pacifico; font-size:2em">
 			</form>
 
       <script type="text/javascript">
       function SubmitFrm(){
         console.log("function!")
-        var Searchtxt = document.getElementById("redir").value;
-        console.log(Searchtxt);
-        window.location = "https://www.google.com" //+ Searchtxt;
+        var space = document.getElementById("redir").value;
+        console.log(space);
+        window.location = "/upload/"+space;
       }
       </script>
-
-      <!-- <input name="txtSearch" id="txtSearch" class="field" />
-      <input type="submit" name="btnSearch" value="" id="btnSearch" class="btn" onclick="javascript:SubmitFrm()" />
-
-      <script type="text/javascript">
-      function SubmitFrm(){
-      var Searchtxt = document.getElementById("txtSearch").value;
-      window.location = "http://www.mysite.com/search/?Query=" + Searchtxt;
-    }
-     </script>
-     -->
 
     </div>
 	</div>
