--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='mfglabs_iconset.css') }}">
     <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon"/>
     <link rel="shortcut icon" href="http://faviconist.com/icons/b088547447296f75af21a368e872d2ef/favicon.ico" />
+    <link href="http://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet" type="text/css">
   <nav class="top-bar" data-topbar>
     <ul class="title-area">
       <li class="name">
@@ -25,23 +26,26 @@
 <br>
 
 <div class="row">
-	<div class="large-6 columns">
-     <img id="logo" src="/static/logo.png" alt="Space Share!"><!-- EITHER LOGO OR TEXT, NOT SURE-->
-	</div>
+	<!--<div class="large-6 columns">
+     <img id="logo" src="/static/logo.png" alt="Space Share!">
+   </div> -->
+  <div class="large-6 columns">
+    <p class="look" id="gist" style="z-index=1"> Share files...
+    <br>
+    <span id="gistTwo"style="z-index=-10;color:#888">instantly.</span></p>
+  </div>
   <div class="large-6 columns">
     <br>
     <br>
-    <p class="look" id="gist"> Share files... instantly.</p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <p style="font-family:Bree Serif ; font-size:1.3em"> Just upload a file and grab it somewhere else, it's quick, and it's simple, the way file sharing should be. Enjoy. </p>
   </div>
 </div>
 <!-- awesomeness below for generating pages -->
-{% if failed %}
-<div class="row">
-  <div class="large-12 columns">
-    <img src="http://www.google.com/images/errors/robot.png">
-    <p class="look response" id="rejection">Sorry!! The upload failed for some reason. <a href=davidawad64@gmail.com>email me</a></p>
-</div>
-{% elif new %}
+{% if space and new %}
 <div class="row">
   <div class="large-12 columns">
     <p class="look response" id="rejection">Sorry!! {{space}} isn't available right now. Try {{new}}?</p>
@@ -51,59 +55,49 @@
   <div class="large-12 columns">
     <p class="look" style="font-size:5em">Thanks!! You've reserved space {{space}}, you can access it at <span href="/upload/{{space}}">/upload/{{space}}</span>!</p>
   </div>
+{% elif failed %}
+<div class="row">
+  <div class="large-12 columns">
+    <img src="http://www.google.com/images/errors/robot.png">
+    <p class="look" id="rejection">Sorry!! The upload failed for some reason. <a href=mailto:davidawad64@gmail.com>email me</a></p>
+</div>
 {% endif %}
 
 <div class="row">
 	<div class="large-5 columns">
 		<div class="panel">
-		<h2><a href="" style="font-family:Pacifico">Create a Space</a></h2>
-
-    <form action="upload" method="POST" enctype="multipart/form-data" onsubmit="fileUpload();">
-      <br>
-			<input type="number" name="space" id="reserve" placeholder="e.g. '32' "/>
-			<input type="file" name="file">
-			<input type="submit" value="upload" class="radius button" style="font-family:Pacifico ; font-size:2em">
-		</form>
-
-    <script type="text/javascript">
-    function fileUpload(){
-      var space = document.getElementById("reserve").value;
-      console.log("SpaceReserve request :"+space);
-    }
-    </script>
-
+      <center>
+		    <h2><a href="" style="font-family:Bree Serif">Create a Space</a></h2>
+        <form action="upload" method="POST" enctype="multipart/form-data" onsubmit="fileUpload();">
+          <br>
+			    <input type="number" name="space" id="reserve" placeholder="e.g. '32' "/>
+			    <input type="file" name="file">
+          <input type="submit" value="upload" class="radius button" style="font-family:Pacifico ; font-size:2em">
+        </center>
+		    </form>
     </div>
 	</div>
   <div class="large-2 columns"> </div>
+
 	<div class="large-5 columns">
 		<div class="panel">
-			<h2><a href="" class ="look">Open a Space</a></h2>
+      <center>
+			<h2><a href="" style="font-family:Bree Serif">Open a Space</a></h2>
       <br>
-
       <form action="open" method="" onsubmit="SubmitFrm(); return false;" >
 				<input type="number" name="space" id="redir" placeholder="e.g. '32' "/>
-				<input type="submit" value="open" class="radius button" style="font-family: Pacifico; font-size:2em">
-			</form>
-
-      <script type="text/javascript">
-      function SubmitFrm(){
-        console.log("function!")
-        var space = document.getElementById("redir").value;
-        console.log(space);
-        window.location = "/upload/"+space;
-      }
-      </script>
-
+        <input type="submit" value="open" class="radius button" style="font-family:Pacifico ; font-size:2em">
+        </center>
+      </form>
     </div>
 	</div>
 </div>
-
   <footer class="row">
     <div class="large-12 columns">
       <hr/>
       <div class="row">
         <div class="large-6 columns">
-          <p class="look">© David Awad</p>
+          <p class="look">© 2015 David Awad</p>
         </div>
          <div class="large-6 columns">
           <ul class="inline-list right">
@@ -116,20 +110,23 @@
     </div>
   </footer>
     <script src="http://code.jquery.com/jquery-2.1.1.js"></script>
-    <!--<script src="js/vendor/modernizr.js"></script>
-    <script src="js/foundation.min.js"></script>
-    <!-- <script src="js/vendor/jquery.js"></script> -->
     <script type="text/javascript">
+    function SubmitFrm(){
+      console.log("function!")
+      var space = document.getElementById("redir").value;
+      console.log(space);
+      window.location = "/upload/"+space;
+    }
+
+    function fileUpload(){
+      var space = document.getElementById("reserve").value;
+      console.log("SpaceReserve request :"+space);
+    }
     ( function($) {
     // we can now rely on $ within the safety of our "bodyguard" function
     $(document).ready( function() {
-      //alert("nyah nyah! I'm able to use '$'!!!!");
-      //$(document).foundation();
-      $('kahuna').fadeIn("slow");
-      //redirect user to their desired text box without server interaction
-      var redir = $('#redir').val();
-      // similar behavior as an HTTP redirect
-      //window.location.replace(" " + redir.toString() );
+      $('#gist').hide().fadeIn(800);
+      $('#gistTwo').hide().fadeIn(4000);
       } );
     } )( jQuery );
     </script>
